# rust_client_server_framework

./: Cargo.toml  README.md  notes.md  rustfmt.toml
client/: Cargo.toml
client/src/: command.rs  lib.rs  task_manager.rs  tasks.rs
connection/: Cargo.toml
connection/src/: connection_manager.rs  lib.rs
connection_utils/: Cargo.toml
connection_utils/src/: command.rs  connection_task.rs  incremental_read.rs  lib.rs  read_write.rs  stream_handling.rs  stream_serialization.rs  traits.rs  types.rs
project_description/: project_description.tex
server/: Cargo.toml
server/src/: command.rs  jobs.rs  lib.rs  manage_connection.rs  request_processing.rs  server_runner.rs  shutdown.rs  tasks.rs
