[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto_impl = "1.0.1"
bincode = "1.3.3"
connection_utils = { path = "../connection_utils" }
futures = "0.3.24"
serde = "1.0.144"
tokio = { version = "1", features = ["full"] }
threadpool = "1.8.1"
